<resources>
    <string name="app_name">DevFestSPBApp</string>
    <string name="speechName">Kotlin-friendly Annotation Processing </string>
    <string name="audienceROOM1">Room 1</string>
    <string name="speakerName">Sergey Ryabov </string>
    <string name="speakerCompany">Mobile Consultant Digital Nomad, Russia</string>
    <string name="speechDescription">Рекламируя вашему другу Kotlin, как замену Java,
        наверняка первым аргументом будет тот самый синтаксический сахар, от которого
        мы получаем профит каждый день: поддержка nullability из коробки, аргументы по
        умолчанию, свойства-делегаты, data и sealed классы и т.д. Но если нам понадобится прикрутить
        к проекту процессор аннотаций, то, к сожалению, вся информация, которую получится собрать о нашем коде,
        будет Java-специфична, а Kotlin-фичи останутся незамеченными. В этом докладе мы выясним,
        как использовать метаданные, добавляемые Kotlin-компилятором к коду, чтобы получить информацию
        об использованных особенностях языка, и как использовать её во время обработки аннотаций.</string>
    <string name="buttonPress">Other</string>

</resources>
